@@ -1763,5 +1763,4 @@ jQuery( document ).ready( function( $ ) {
         return false;
     } );
 
-
 } );
